--- a/public/css/workwise/style.css
+++ b/public/css/workwise/style.css
@@ -392,7 +392,7 @@ nav {
 nav ul li {
 	display: inline-block;
 	text-align: center;
-	padding: 13px 13px;
+	padding: 13px 20px;
 	position: relative;
 }
 nav ul li:hover > ul {
@@ -425,6 +425,7 @@ nav ul ul li a:hover {
 }
 nav ul ul li a {
 	font-size: 16px;
+	
 }
 .notification-box.msg p {
 	line-height: 16px;
@@ -534,7 +535,7 @@ nav > ul > li > a:hover {
 .user-info {
 	float: left;
 	width: 100%;
-	padding: 13px 10px;
+	padding: 13px 1px;
 	position: relative;
 }
 .user-account-settingss {
@@ -661,18 +662,20 @@ nav > ul > li > a:hover {
 	color: #000;
 }
 .user-info img {
-	margin-right: 10px;
+	margin-right: -60px;
 	-webkit-border-radius: 100px;
 	-moz-border-radius: 100px;
 	-ms-border-radius: 100px;
 	-o-border-radius: 100px;
 	border-radius: 100px;
+	float: right;
 }
 .user-info a {
 	color: #fff;
-	font-size: 14px;
+	font-size: 15px;
 	float: left;
-	margin-top: 8px;
+	margin-top: 4px;
+	margin-left:10px;
 }
 .user-info a:hover {
 	color: #fff;
@@ -2493,6 +2496,7 @@ select {
 footer {
 	float: left;
 	width: 100%;
+	margin-top:250px;
 	background-color: #fff;
 }
 .footy-sec.mn ul {
@@ -3466,7 +3470,7 @@ a:hover {
 }
 .company-title {
 	float: left;
-	width: 100%;
+	width: 75%;
 	margin-bottom: 20px;
 	padding: 0 15px;
 }
@@ -5003,8 +5007,8 @@ a:hover {
 	padding-left: 15px;
 }
 .usr_quest > h3 {
-	color: #000000;
-	font-size: 17px;
+	color: #160d01;
+	font-size: 30px;
 	font-weight: 600;
 	margin-bottom: 20px;
 }
