--- a/resources/workwise/style.css
+++ b/resources/workwise/style.css
@@ -399,6 +399,9 @@ nav ul li {
 	padding: 13px 15px;
 	position: relative;
 }
+
+
+
 nav ul li:hover > ul {
 	opacity: 1;
 	visibility: visible;
@@ -425,9 +428,15 @@ nav ul ul li {
 	margin-bottom: 15px;
 	padding: 0 5px;
 }
-nav ul ul li a:hover {
-	color: #fff;
+
+.tabhead{
+	
 }
+
+.ad-content{
+	border: 4px solid #44331f;
+}
+
 nav ul ul li a {
 	font-size: 16px;
 	
@@ -532,8 +541,8 @@ nav > ul > li > a:hover {
 .user-account {
 	float: right;
 	width: 110px;
-	border-left: 1px solid #dd3e2b;
-	border-right: 1px solid #dd3e2b;
+	border-left: 1px solid #fff;
+	border-right: 1px solid #fff;
 	box-sizing: border-box;
 	position: relative;
 }
@@ -735,7 +744,7 @@ main {
 .username-dt {
 	float: left;
 	width: 100%;
-	background-color: #923ae4;
+	background-color: #717171;
 	padding-top: 40px;
 }
 .user-data {
@@ -973,7 +982,7 @@ main {
 	width: 100%;
 	padding: 23px 20px;
 	background-color: #fff;
-	border-top: 4px solid #e44d3a;
+	border-top: 4px solid #51a5fb;
 	border-left: 1px solid #e4e4e4;
 	border-bottom: 1px solid #e4e4e4;
 	border-right: 1px solid #e4e4e4;
@@ -1004,11 +1013,14 @@ main {
 .post-st ul li:last-child {
 	margin-right: 0;
 }
+
+
+
 .post-st ul li a {
 	color: #fff;
 	font-size: 18px;
 	display: inline-block;
-	background-color: #666666;
+	background-color: #53d690;
 	height: 40px;
 	
 	padding: 0 15px;
@@ -1017,6 +1029,24 @@ main {
 }
 .post-st ul li a:hover,
 .post-st ul li a.active {
+	background-color: #00b540;
+	color: #fff;
+}
+
+.ad-st ul li a {
+	color: #fff;
+	font-size: 18px;
+	display: inline-block;
+	background-color: #53d690;
+	height: 40px;
+	margin-top:9px;
+	
+	padding: 0 15px;
+	line-height: 40px;
+	font-weight: 500;
+}
+.ad-st ul li a:hover,
+.ad-st ul li a.active {
 	background-color: #00b540;
 	color: #fff;
 }
@@ -1703,7 +1733,7 @@ main {
 	border-left: 1px solid #e4e4e4;
 	border-right: 1px solid #e4e4e4;
 	border-bottom: 1px solid #e4e4e4;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 	-webkit-box-shadow: 1px 0px 2px rgba(0,0,0,0.24);
 	-moz-box-shadow: 1px 0px 2px rgba(0,0,0,0.24);
 	-ms-box-shadow: 1px 0px 2px rgba(0,0,0,0.24);
@@ -5001,11 +5031,33 @@ a:hover {
 	-o-border-radius: 100px;
 	border-radius: 100px;
 }
+
+.ad_img {
+	float: left;
+	width: 90px;
+	height: 150px;
+}
+.ad_img a {
+	width: 100%;
+	-webkit-border-radius: 100px;
+	-moz-border-radius: 100px;
+	-ms-border-radius: 100px;
+	-o-border-radius: 100px;
+	border-radius: 75px;
+}
+
 .usr_quest {
 	float: left;
 	width: 90%;
 	padding-left: 15px;
 }
+
+.ad_quest {
+	float: left;
+	width: 70%;
+	padding-left: 15px;
+}
+
 .usr_quest > h3 {
 	color: #160d01;
 	font-size: 30px;
@@ -5112,12 +5164,15 @@ a:hover {
 .title-wd {
 	float: left;
 	width: 100%;
-	color: #000000;
+	color: #fff;
+	background-color: #000;
 	font-size: 18px;
 	font-weight: 600;
 	border-bottom: 1px solid #e5e5e5;
 	padding: 25px 20px;
 }
+
+
 .widget-user ul {
 	float: left;
 	width: 100%;
