--- a/resources/workwise/style.css
+++ b/resources/workwise/style.css
@@ -1219,6 +1219,7 @@ main {
 	float: left;
 	width: 100%;
 	padding: 0 20px 20px 20px;
+	margin-left: 35px;
 	border-bottom: 1px solid #e5e5e5;
 }
 .job_descp h3 {
