--- a/resources/workwise/style.css
+++ b/resources/workwise/style.css
@@ -430,12 +430,62 @@ nav ul ul li {
 }
 
 .tabhead{
+	margin-left : -50px;
+	margin-right : 50px;
 	
+}
+
+.rightad{
+	
+	margin-right: -100px;
+	
+}
+
+.colordate{
+	color: #1769ff;
+	font-size: 20px;
+	margin-left: -10px;
+}
+
+.eventtitle
+{
+	margin-left: 70px;
+	font-size: 25px;
+	color: #000;
+}
+
+.eventheader{
+	font-size: 25px;
+	color: #000;
+}
+
+.eventvenue
+{
+	margin-left: 73px;
+	color: #666666;
+	margin-top: -20px;
+}
+
+.location{
+	margin-left:60px;
+}
+
+.leftdate{
+	float:left;
+}
+
+.middlebody{
+	margin-left: -5px;
+
 }
 
 .ad-content{
 	border: 4px solid #44331f;
+	margin-right: 50px;
 }
+
+
+
 
 nav ul ul li a {
 	font-size: 16px;
@@ -765,6 +815,7 @@ main {
 	-o-border-radius: 100px;
 	border-radius: 100px;
 	width: 100%;
+	
 }
 .user-profile {
 	float: left;
@@ -1082,6 +1133,8 @@ main {
 	-ms-border-radius: 100px;
 	-o-border-radius: 100px;
 	border-radius: 100px;
+	
+	
 }
 .ed-opts {
 	float: right;
