--- a/resources/workwise/style.css
+++ b/resources/workwise/style.css
@@ -459,6 +459,31 @@ nav ul ul li {
 	color: #000;
 }
 
+.announcementlatesttitle{
+	font-size: 20px;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	text-align: center;
+	background-color: #666666;
+	color: #fff;
+	line-height: 20px;
+	text-transform: capitalize;
+}
+
+.announcementtitle{
+	font-size: 20px;
+	text-transform: capitalize;
+	color: red;
+	
+}
+
+
+
+
+.announcementmargin{
+	float:left;
+	padding:0;
+}
+
 .eventvenue
 {
 	margin-left: 73px;
@@ -601,6 +626,7 @@ nav > ul > li > a:hover {
 	width: 100%;
 	padding: 13px 1px;
 	position: relative;
+	text-transform: capitalize;
 }
 .user-account-settingss {
 	position: absolute;
