--- a/resources/workwise/style.css
+++ b/resources/workwise/style.css
@@ -484,9 +484,6 @@ nav ul ul li {
 	margin-right: 50px;
 }
 
-
-
-
 nav ul ul li a {
 	font-size: 16px;
 	
@@ -1271,8 +1268,8 @@ main {
 .job_descp {
 	float: left;
 	width: 100%;
-	padding: 0 20px 20px 20px;
-	margin-left: 35px;
+	padding: 0 50px 20px 20px;
+	margin-top: 10px;
 	border-bottom: 1px solid #e5e5e5;
 }
 .job_descp h3 {
@@ -1310,8 +1307,9 @@ main {
 	font-weight: 600;
 }
 .job_descp > p {
-	color: #686868;
-	font-size: 16px;
+	margin-left: 15px;
+	color: black;
+	font-size: 18px;
 	line-height: 24px;
 	margin-bottom: 20px;
 }
@@ -2648,14 +2646,12 @@ footer {
 	background-color: #fff;
 	margin-bottom: 20px;
 	text-align: center;
-	margin-top: -40px;
 }
 .user-pro-img {
 	float: left;
 	width: 100%;
 	text-align: center;
 	margin-bottom: 28px;
-	margin-top: -95px;
 	position: relative;
 }
 .user-pro-img > a {
@@ -2802,19 +2798,18 @@ footer {
 .user-tab-sec {
 	float: left;
 	width: 100%;
-	padding-top: 4px;
 }
 .user-tab-sec h3 {
 	color: #000000;
 	font-size: 40px;
 	font-weight: 400;
 	text-transform: capitalize;
-	margin-bottom: 7px;
+
 }
 .star-descp {
 	float: left;
 	width: 100%;
-	margin-bottom: 50px;
+	margin-bottom: 20px;
 }
 .star-descp > a {
 	float: left;
@@ -2847,7 +2842,7 @@ footer {
 .tab-feed {
 	float: left;
 	width: 100%;
-	margin-bottom: 47px;
+	margin-bottom: 27px;
 }
 .tab-feed ul {
 	float: left;
@@ -2855,7 +2850,7 @@ footer {
 }
 .tab-feed ul li {
 	display: inline-block;
-	margin-right: 35px;
+	margin-right: 15px;
 	text-align: center;
 }
 .tab-feed.st2 ul li {
